add support for arm64, ppc64le and s390x architectures

--- a/bin/install
+++ b/bin/install
@@ -29,7 +29,23 @@ get_platform() {
 }
 
 get_arch() {
-  [ "x86_64" = "$(uname -m)" ] && echo "x86_64" || echo "i386"
+  local arch=$(uname -m)
+  case $arch in
+    amd64 | x86_64)
+      echo "amd64"
+      ;;
+    arm64)
+      echo "arm64"
+      ;;
+    ppc64le)
+      echo "ppc64le"
+      ;;
+    s390 | s390x)
+      echo "s390x"
+      ;;
+    *)
+      echo ""
+  esac
 }
 
 get_download_url() {
