--- a/bin/install
+++ b/bin/install
@@ -32,7 +32,7 @@ get_arch() {
   local arch=$(uname -m)
   case $arch in
     amd64 | x86_64)
-      echo "amd64"
+      echo "x86_64"
       ;;
     arm64)
       echo "arm64"
